@@ -19,6 +19,7 @@ CAY-2897 Add no-op default implementations to the GraphChangeHandler interface
 
 Bug Fixes:
 
+CAY-2836 ObjectSelect.selectCount() throws if a query contains ordering
 CAY-2883 License and notice templates are not processed by the Gradle build
 CAY-2885 Modeler: DbImport fails to load DB schema view
 CAY-2887 Expressions: Incorrect serialization to string of numeric literals
